[package]
name = "crusty"
version = "0.1.0"
authors = ["mwachala <berrybretch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.0.1"
tokio = {version = "1", features = ["full"]}
scraper = "0.12.0"