[package]
name = "rusty2001"
version = "0.1.0"
authors = ["mwachala <berrybretch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = { version = "0.17.1", features = ["native-tls"] }
tokio = { version = "1.1.1", features = ["full"] }
